Bug#18053 Partitions: crash if null Bug#18070 Partitions: wrong result on WHERE ... IS NULL  removed unnecessary code  added handling of NULL values

mysql-test/r/partition.result:
  Bug#18053 Partitions: crash if null
  Bug#18070 Partitions: wrong result on WHERE ... IS NULL
   test case
mysql-test/t/partition.test:
  Bug#18053 Partitions: crash if null
  Bug#18070 Partitions: wrong result on WHERE ... IS NULL
   test case
sql/opt_range.cc:
  Bug#18053 Partitions: crash if null
  Bug#18070 Partitions: wrong result on WHERE ... IS NULL
   initialisation of part_iter.has_null_value
sql/sql_partition.h:
  Bug#18053 Partitions: crash if null
  Bug#18070 Partitions: wrong result on WHERE ... IS NULL
   added has_null_value